--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="index.html" class="active">Ana Sayfa</a>
+                        <a href="index.html" class="active">Home</a>
                     </li>
                     <li>
-                        <a href="Pages/anime_list/anime_list.html">Animeler</a>
+                        <a href="Pages/anime_list/anime_list.html">Animes</a>
                     </li>
                     <li>
-                        <a href="Pages/news/haberler.html">Haberler</a>
+                        <a href="Pages/news/haberler.html">News</a>
                     </li>
                     <li>
                         <a href="Pages/very_soon/yakinda.html">Forum</a>
                     </li>
                     <li>
-                        <a href="Pages/support/destek.html">Destek</a>
+                        <a href="Pages/support/destek.html">Support</a>
                     </li>
                 </ul>
                
@@ -51,9 +51,9 @@
         <div class="header-right"> <!--Sağ nav/Kayıt-Giriş kısmının konumlandırılması-->
             <a href="login.html"><i class="fa-solid fa-user" style="color: #ffffff;"></i></a> 
             <div class="hamburger">
-                <div> <a href="/Pages/anime_list/anime_list.html">Animeler</a></div>
-                <div> <a href="/Pages/news/haberler.html">Haberler</a></div>
-                <div> <a href="/Pages/support/destek.html">Destek</a></div>
+                <div> <a href="/Pages/anime_list/anime_list.html">Animes</a></div>
+                <div> <a href="/Pages/news/haberler.html">News</a></div>
+                <div> <a href="/Pages/support/destek.html">Support</a></div>
             </div>
         </div>
     </header>
