--- a/Pages/anime_pages/persona4/persona.html
+++ b/Pages/anime_pages/persona4/persona.html
@@ -78,8 +78,8 @@
     
 <div class="anime_box">
 	<div class="box_header"><h1>Persona 4</h1> <div class="alt_cizgi"></div>
-	<div class="box_about"></div>Sağanak yağmurdan sonra ortaya çıkan sisle birlikte gizemli cinayetler işlenmektedir. Yalnızca geceleri yayın yapan Mayonaka TV ile ilgili dedikodular yayılmaya başlamıştır. Yayın sırasında ekrana bakan kişinin karşı tarafta "diğer yarısını" görebileceği söylenmektedir. Bu faili meçhul cinayetleri duyduktan sonra karakterlerimiz gizemli TV kanalını izlemiş ve olaya şahit olmuşlardır. Baş kahramanımız kanalı izlerken bedeninin ekrandan geçerek gölgelerle dolu bir dünyaya aktığını fark eder. Bunu öğrendikten sonra tüm karakterler aynı deneyimi yaşamaya karar verirler ve cinayete kurban gidenlerle Mayonaka TV arasında bir bağ bulunduğunu keşfederler. Oyunu oynamamış, diğer seri Persona: Trinity Soul'u izlememiş, kısacası projeyle ilgili hiçbir fikri bulunmayan biri olarak ilk bölüm benim hoşuma gitti. Öyle çok ahım şahım bir sunumda bulunmadı ve temposu haddinden biraz hızlıymış gibi göründü ama genel olarak gizemi, aksiyonu ve bir parça da korkuyu çok iyi yansıtabileceğini kanıtladı. Karakter gelişimi konusunda hep bu kadar atik davranmayacaklarını ümit ediyorum. Öte yandan bölüm arasındaki karakter durumu harika bir ayrıntı. Oyundan uyarlanan animelere yeni bir özellik katabilir. Serideki atmosfer gayet iyi, karakterler izlenebilir düzeyde, gizem zaten serinin en önemli silahı.Özetle benim için birçok koşul sağlanmış durumda.</div>
-	<div class="categories"></bold>Kategoriler:</bold> Bilim Kurgu, Süper Güç, Psikoloji</div>
+	<div class="box_about"></div>A high school student forms a group that explores a hidden world accessible through TV sets to find a connection between the "realm of shadows" and the mysterious murders in their town.</div>
+	<div class="categories"></bold>categories:</bold> Bilim Kurgu, Süper Güç, Psikoloji</div>
     <div class="studio"><bold>Stüdyo:</bold>AIC A.S.T.A.</div>
     <div class="myanimelist"><bold>MyAnimeList Skor:</bold> 7.5</div>
 
