--- a/Pages/anime_pages/persona4/persona.html
+++ b/Pages/anime_pages/persona4/persona.html
@@ -79,9 +79,9 @@
 <div class="anime_box">
 	<div class="box_header"><h1>Persona 4</h1> <div class="alt_cizgi"></div>
 	<div class="box_about"></div>A high school student forms a group that explores a hidden world accessible through TV sets to find a connection between the "realm of shadows" and the mysterious murders in their town.</div>
-	<div class="categories"></bold>categories:</bold> Bilim Kurgu, Süper Güç, Psikoloji</div>
-    <div class="studio"><bold>Stüdyo:</bold>AIC A.S.T.A.</div>
-    <div class="myanimelist"><bold>MyAnimeList Skor:</bold> 7.5</div>
+	<div class="categories"></bold>categories:</bold> Sci-fi, Super power, Psychology</div>
+    <div class="studio"><bold>Studio: </bold>AIC A.S.T.A.</div>
+    <div class="myanimelist"><bold>MyAnimeList Score:</bold> 7.5</div>
 
   <br>
    
