--- a/Pages/anime_pages/persona4/persona.html
+++ b/Pages/anime_pages/persona4/persona.html
@@ -78,7 +78,7 @@
     
 <div class="anime_box">
 	<div class="box_header"><h1>Persona 4</h1> <div class="alt_cizgi"></div>
-	<div class="box_about"></div>A high school student forms a group that explores a hidden world accessible through TV sets to find a connection between the "realm of shadows" and the mysterious murders in their town.</div>
+	<div class="box_about"></div>The story revolves around Yu Narukami, a young teenager who moves to the town of Inaba, where a mysterious string of murders is taking place. Upon discovering a distorted TV World and acquiring a mysterious power known as "Persona", Yu and his friends decide to investigate the murders and save others from being killed.</div>
 	<div class="categories"></bold>categories:</bold> Sci-fi, Super power, Psychology</div>
     <div class="studio"><bold>Studio: </bold>AIC A.S.T.A.</div>
     <div class="myanimelist"><bold>MyAnimeList Score:</bold> 7.5</div>
