--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <li><a href="#"><i class="fa-brands fa-twitter" style="color: #C0C0C0;"></i></a></li>
             <li><a href="#"><i class="fa-brands fa-tiktok" style="color: #C0C0C0"></i></a></li>
             <li><a href="#"><i class="fa-brands fa-facebook" style="color: #C0C0C0;"></i></a></li>
-            <li><a href="#"><i class="fa-brands fa-youtube" style="color: #C0C0C0;"></i></a></li>
+            <li><a href=https://youtu.be/CwQWrbkBmmM?si=h9Z8p788DFYE7n39><i class="fa-brands fa-youtube" style="color: #C0C0C0;"></i></a></li>
           </ul>
         </div>
       </div>
