--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
       <div class="row">
         <div class="col-md-4">
           <h3>About us</h3>
-          <p>Shogun Anime, binlerce animeye istediğiniz zaman istediğiniz yerde ulaşmanızı sağlar. Dilediğiniz kategoriden dilediğiniz içeriği güncel olarak takip etme olanağı sunar. Daha fazlası için bize katılın.</p>
+          <p>Shogun Anime allows you to access thousands of anime whenever and wherever you want. It offers you the opportunity to follow up-to-date content of your choice from any category you want. Join us for more.</p>
         </div>
         <div class="col-md-3">
           <h3>Quick Links</h3>
