--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <li><a href="Pages/anime_pages/persona4/persona.html"><img src="Images/Anime/001.jpg"></a></li>
     <li><a href="Pages/anime_pages/persona4/persona.html"><img src="Images/Anime/002.jpg"></a></li>
     <li><a href="Pages/anime_pages/persona4/persona.html"><img src="Images/Anime/003.jpg"></a></li>
-    <li><a href="Pages/anime_pages/persona4/persona.html"><img src="Images/Anime/004.jpg"></a></li>
+    <li><a href="Pages/anime_pages/fate:zer0/fate_0.html"><img src="Images/Anime/004.jpg"></a></li>
     <li><a href="Pages/anime_pages/persona4/persona.html"><img src="Images/Anime/005.jpg"></a></li>
     <li><a href="Pages/anime_pages/persona4/persona.html"><img src="Images/Anime/006.jpg"></a></li>
     <li><a href="Pages/anime_pages/persona4/persona.html"><img src="Images/Anime/007.jpg"></a></li>
