--- a/Pages/anime_pages/persona4/persona.html
+++ b/Pages/anime_pages/persona4/persona.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Persona4</title>
+	<title>Fate/Zero</title>
 	<link rel="stylesheet" type="text/css" href="../../../css/style.css">
 	<link rel="stylesheet" type="text/css" href="../../../css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -46,19 +46,19 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="../../../index.html" class="active">Ana Sayfa</a>
+                        <a href="../../../index.html" class="active">Home</a>
                     </li>
                     <li>
-                        <a href="../../anime_list/anime_list.html">Animeler</a>
+                        <a href="../../anime_list/anime_list.html">Animes</a>
                     </li>
                     <li>
-                        <a href="../../news_pages/news_pages.html">Haberler</a>
+                        <a href="../../news_pages/news_pages.html">News</a>
                     </li>
                     <li>
                         <a href="../../very_soon/yakinda.html">Forum</a>
                     </li>
                     <li>
-                        <a href="../../support/destek.html">Destek</a>
+                        <a href="../../support/destek.html">Support</a>
                     </li>
                 </ul>
                
@@ -77,12 +77,13 @@
 
     
 <div class="anime_box">
-	<div class="box_header"><h1>Persona 4</h1> <div class="alt_cizgi"></div>
-	<div class="box_about"></div>The story revolves around Yu Narukami, a young teenager who moves to the town of Inaba, where a mysterious string of murders is taking place. Upon discovering a distorted TV World and acquiring a mysterious power known as "Persona", Yu and his friends decide to investigate the murders and save others from being killed.</div>
+	<div class="box_header"><h1>Fate/Zero</h1> <div class="alt_cizgi"></div>
+	<div class="box_about"></div>Fate/Zero is set ten years before the events of Fate/stay night, and tells the story of the Fourth Holy Grail War, a secret magical tournament held in Fuyuki City, Japan, where seven mages known as Masters summon Servants, reincarnations of legendary souls and heroes from all across time, where they fight in a deadly battle royale where the winner obtains the Holy Grail, a legendary magical chalice capable of granting wishes. The main protagonist, Kiritsugu Emiya, the foster father of Fate/stay night's protagonist, Shirou Emiya, is known as a ruthless assassin who joins the tournament on behalf of his wife's family, the Einzberns.
+</div>
 	<br>
-	<div class="categories"></bold>Categories:</bold> Sci-fi, Super power, Psychology</div>
-    <div class="studio"><bold>Studio: </bold>AIC A.S.T.A.</div>
-    <div class="myanimelist"><bold>MyAnimeList Score:</bold> 7.5</div>
+	<div class="categories"></bold>Categories:</bold> Action, Dark Fantasy, Tragedy</div>
+    <div class="studio"><bold>Studio: </bold>Ufotable </div>
+    <div class="myanimelist"><bold>MyAnimeList Score:</bold> 8.3</div>
 
   <br>
    
