--- a/Pages/anime_pages/fate:zer0/fate_0.html
+++ b/Pages/anime_pages/fate:zer0/fate_0.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Persona4</title>
+	<title>Fate/Zero</title>
 	<link rel="stylesheet" type="text/css" href="../../../css/style.css">
 	<link rel="stylesheet" type="text/css" href="../../../css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -46,19 +46,19 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="../../../index.html" class="active">Ana Sayfa</a>
+                        <a href="../../../index.html" class="active">Home</a>
                     </li>
                     <li>
-                        <a href="../../anime_list/anime_list.html">Animeler</a>
+                        <a href="../../anime_list/anime_list.html">Animes</a>
                     </li>
                     <li>
-                        <a href="../../news_pages/news_pages.html">Haberler</a>
+                        <a href="../../news_pages/news_pages.html">News</a>
                     </li>
                     <li>
                         <a href="../../very_soon/yakinda.html">Forum</a>
                     </li>
                     <li>
-                        <a href="../../support/destek.html">Destek</a>
+                        <a href="../../support/destek.html">Support</a>
                     </li>
                 </ul>
                
@@ -77,11 +77,13 @@
 
     
 <div class="anime_box">
-	<div class="box_header"><h1>Persona 4</h1> <div class="alt_cizgi"></div>
-	<div class="box_about"></div>Sağanak yağmurdan sonra ortaya çıkan sisle birlikte gizemli cinayetler işlenmektedir. Yalnızca geceleri yayın yapan Mayonaka TV ile ilgili dedikodular yayılmaya başlamıştır. Yayın sırasında ekrana bakan kişinin karşı tarafta "diğer yarısını" görebileceği söylenmektedir. Bu faili meçhul cinayetleri duyduktan sonra karakterlerimiz gizemli TV kanalını izlemiş ve olaya şahit olmuşlardır. Baş kahramanımız kanalı izlerken bedeninin ekrandan geçerek gölgelerle dolu bir dünyaya aktığını fark eder. Bunu öğrendikten sonra tüm karakterler aynı deneyimi yaşamaya karar verirler ve cinayete kurban gidenlerle Mayonaka TV arasında bir bağ bulunduğunu keşfederler. Oyunu oynamamış, diğer seri Persona: Trinity Soul'u izlememiş, kısacası projeyle ilgili hiçbir fikri bulunmayan biri olarak ilk bölüm benim hoşuma gitti. Öyle çok ahım şahım bir sunumda bulunmadı ve temposu haddinden biraz hızlıymış gibi göründü ama genel olarak gizemi, aksiyonu ve bir parça da korkuyu çok iyi yansıtabileceğini kanıtladı. Karakter gelişimi konusunda hep bu kadar atik davranmayacaklarını ümit ediyorum. Öte yandan bölüm arasındaki karakter durumu harika bir ayrıntı. Oyundan uyarlanan animelere yeni bir özellik katabilir. Serideki atmosfer gayet iyi, karakterler izlenebilir düzeyde, gizem zaten serinin en önemli silahı.Özetle benim için birçok koşul sağlanmış durumda.</div>
-	<div class="categories"></bold>Kategoriler:</bold> Bilim Kurgu, Süper Güç, Psikoloji</div>
-    <div class="studio"><bold>Stüdyo:</bold>AIC A.S.T.A.</div>
-    <div class="myanimelist"><bold>MyAnimeList Skor:</bold> 7.5</div>
+	<div class="box_header"><h1>Fate/Zero</h1> <div class="alt_cizgi"></div>
+	<div class="box_about"></div>Fate/Zero is set ten years before the events of Fate/stay night, and tells the story of the Fourth Holy Grail War, a secret magical tournament held in Fuyuki City, Japan, where seven mages known as Masters summon Servants, reincarnations of legendary souls and heroes from all across time, where they fight in a deadly battle royale where the winner obtains the Holy Grail, a legendary magical chalice capable of granting wishes. The main protagonist, Kiritsugu Emiya, the foster father of Fate/stay night's protagonist, Shirou Emiya, is known as a ruthless assassin who joins the tournament on behalf of his wife's family, the Einzberns.
+</div>
+	<br>
+	<div class="categories"></bold>Categories:</bold> Action, Dark Fantasy, Tragedy</div>
+    <div class="studio"><bold>Studio: </bold>Ufotable </div>
+    <div class="myanimelist"><bold>MyAnimeList Score:</bold> 8.3</div>
 
   <br>
    
