--- a/Pages/anime_pages/persona4/persona.html
+++ b/Pages/anime_pages/persona4/persona.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Fate/Zero</title>
+	<title>Persona 4</title>
 	<link rel="stylesheet" type="text/css" href="../../../css/style.css">
 	<link rel="stylesheet" type="text/css" href="../../../css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -77,13 +77,12 @@
 
     
 <div class="anime_box">
-	<div class="box_header"><h1>Fate/Zero</h1> <div class="alt_cizgi"></div>
-	<div class="box_about"></div>Fate/Zero is set ten years before the events of Fate/stay night, and tells the story of the Fourth Holy Grail War, a secret magical tournament held in Fuyuki City, Japan, where seven mages known as Masters summon Servants, reincarnations of legendary souls and heroes from all across time, where they fight in a deadly battle royale where the winner obtains the Holy Grail, a legendary magical chalice capable of granting wishes. The main protagonist, Kiritsugu Emiya, the foster father of Fate/stay night's protagonist, Shirou Emiya, is known as a ruthless assassin who joins the tournament on behalf of his wife's family, the Einzberns.
-</div>
+	<div class="box_header"><h1>Persona 4</h1> <div class="alt_cizgi"></div>
+	<div class="box_about"></div>A high school student forms a group that explores a hidden world accessible through TV sets to find a connection between the "realm of shadows" and the mysterious murders in their town.</div>
 	<br>
-	<div class="categories"></bold>Categories:</bold> Action, Dark Fantasy, Tragedy</div>
-    <div class="studio"><bold>Studio: </bold>Ufotable </div>
-    <div class="myanimelist"><bold>MyAnimeList Score:</bold> 8.3</div>
+	<div class="categories"></bold>Categories:</bold> Sci-Fi, Superpower, Psychology</div>
+    <div class="studio"><bold>Studio: </bold>AIC ASTA </div>
+    <div class="myanimelist"><bold>MyAnimeList Score:</bold> 7.5</div>
 
   <br>
    
