--- a/Pages/anime_list/anime_list.html
+++ b/Pages/anime_list/anime_list.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Anime Listesi</title>
+	<title>Anime List</title>
   <link rel="stylesheet" type="text/css" href="../../css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="../../css/style.css">
   <link rel="icon" href="../../Images/favicon.ico" type="image/x-icon" />
@@ -25,19 +25,19 @@
         <nav>
             <ul>
                 <li>
-                    <a href="../../index.html" class="active">Ana Sayfa</a>
+                    <a href="../../index.html" class="active">Home</a>
                 </li>
                 <li>
-                    <a href="../../Pages/anime_list/anime_list.html">Animeler</a>
+                    <a href="../../Pages/anime_list/anime_list.html">Animes</a>
                 </li>
                 <li>
-                    <a href="../../Pages/news/haberler.html">Haberler</a>
+                    <a href="../../Pages/news/haberler.html">News</a>
                 </li>
                 <li>
                     <a href="../very_soon/yakinda.html">Forum</a>
                 </li>
                 <li>
-                    <a href="../support/destek.html">Destek</a>
+                    <a href="../support/destek.html">Support</a>
                 </li>
             </ul>
            
@@ -46,9 +46,9 @@
     <div class="header-right"> <!--Sağ nav/Kayıt-Giriş kısmının konumlandırılması-->
         <a href="../../login.html"><i class="fa-solid fa-user" style="color: #ffffff;"></i></a> 
         <div class="hamburger">
-            <div> <a href="/Pages/anime_list/anime_list.html">Animeler</a></div>
-            <div> <a href="/Pages/news/haberler.html">Haberler</a></div>
-            <div> <a href="/Pages/support/destek.html">Destek</a></div>
+            <div> <a href="/Pages/anime_list/anime_list.html">Animes</a></div>
+            <div> <a href="/Pages/news/haberler.html">News</a></div>
+            <div> <a href="/Pages/support/destek.html">Support</a></div>
         </div>
     </div>
 </header>
@@ -61,7 +61,7 @@
     <li><a href="../../Pages/anime_pages/persona4/persona.html"><img src="../../Images/Anime/001.jpg"></a></li>
     <li><a href="../../Pages/anime_pages/persona4/persona.html"><img src="../../Images/Anime/002.jpg"></a></li>
     <li><a href="../../Pages/anime_pages/persona4/persona.html"><img src="../../Images/Anime/003.jpg"></a></li>
-    <li><a href="../../Pages/anime_pages/persona4/persona.html"><img src="../../Images/Anime/004.jpg"></a></li>
+    <li><a href="../../Pages/anime_pages/fate:zer0/fate_0.html"><img src="../../Images/Anime/004.jpg"></a></li>
     <li><a href="../../Pages/anime_pages/persona4/persona.html"><img src="../../Images/Anime/005.jpg"></a></li>
    
 </ul>
