--- a/Pages/anime_pages/fate:zer0/fate_0.html
+++ b/Pages/anime_pages/fate:zer0/fate_0.html
@@ -136,7 +136,7 @@
       
     </div>
         <br><br>
-   <iframe width="250" height="140" src="https://www.youtube.com/embed/kg1LQGMdmxo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+   <iframe width="250" height="140" src="https://youtu.be/n-7PFiut1HI?si=Y2ZM2ILga2hsCjsf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   
    <br><br><br><br><br><br><br><br><br><br><br><br>
    
