--- a/Pages/support/destek.html
+++ b/Pages/support/destek.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Destek</title>
+	<title>Support</title>
     <link rel="stylesheet" type="text/css" href="../../css/bootstrap.min.css"><!--Bootstrap-->
 	<link rel="stylesheet" type="text/css" href="../../css/style.css">
     <link rel="icon" href="../../Images/favicon.ico" type="image/x-icon" />
@@ -25,19 +25,19 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="../../index.html" class="active">Ana Sayfa</a>
+                        <a href="../../index.html" class="active">Home</a>
                     </li>
                     <li>
-                        <a href="../../Pages/anime_list/anime_list.html">Animeler</a>
+                        <a href="../../Pages/anime_list/anime_list.html">Animes</a>
                     </li>
                     <li>
-                        <a href="../../Pages/news/haberler.html">Haberler</a>
+                        <a href="../../Pages/news/haberler.html">News</a>
                     </li>
                     <li>
                         <a href="../../Pages/very_soon/yakinda.html">Forum</a>
                     </li>
                     <li>
-                        <a href="../../Pages/support/destek.html">Destek</a>
+                        <a href="../../Pages/support/destek.html">Support</a>
                     </li>
                 </ul>
                
@@ -46,9 +46,9 @@
         <div class="header-right"> <!--Sağ nav/Kayıt-Giriş kısmının konumlandırılması-->
             <a href="../../login.html"><i class="fa-solid fa-user" style="color: #ffffff;"></i></a> 
             <div class="hamburger">
-                <div> <a href="/Pages/anime_list/anime_list.html">Animeler</a></div>
-                <div> <a href="/Pages/news/haberler.html">Haberler</a></div>
-                <div> <a href="/Pages/support/destek.html">Destek</a></div>
+                <div> <a href="/Pages/anime_list/anime_list.html">Animes</a></div>
+                <div> <a href="/Pages/news/haberler.html">News</a></div>
+                <div> <a href="/Pages/support/destek.html">Support</a></div>
             </div>
         </div>
     </header>
@@ -62,23 +62,23 @@
 <div class="support_main_panel">
     <div class="yan-div mor-div">
 
-       <div class="baslik"><h1>İLETİŞİM FORMU</h1></div> <br>
+       <div class="baslik"><h1>CONTACT FORM</h1></div> <br>
         <div class="container">
             <form action="#" method="post">
               <div class="form-group">
-                <label for="name"><pre>         İsim:</pre></label>
+                <label for="name"><pre>         Name:</pre></label>
                 <input type="text" id="name" name="name" required>
               </div>
               <div class="form-group">
-                <label for="email"><pre>         E-posta:</pre></label>
+                <label for="email"><pre>         Email:</pre></label>
                 <input type="email" id="email" name="email" required>
               </div>
               <div class="form-group">
-                <label for="message"><pre>         Mesaj:</pre></label>
+                <label for="message"><pre>         Message:</pre></label>
                 <textarea id="message" name="message" required></textarea>
               </div>
               <div class="form-group">
-                <button type="submit" class="support_button">Gönder</button>
+                <button type="submit" class="support_button">Send</button>
               </div>
             </form>
           </div>
