--- a/Pages/very_soon/yakinda.html
+++ b/Pages/very_soon/yakinda.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Çok Yakında!</title>
+	<title>Very soon!</title>
     <link rel="stylesheet" type="text/css" href="../../css/bootstrap.min.css"><!--Bootstrap-->
 	<link rel="stylesheet" type="text/css" href="../../css/style.css">
     <link rel="icon" href="../../Images/favicon.ico" type="image/x-icon" />
@@ -23,7 +23,9 @@
 
     <br>
     <a href="../../index.html"><div class="gif"><img src="../../Images/Anime/soon.gif" style="width:480px;height:480px;" alt="Windows Firewall"></div></a><br>
-    <div class="whitecolor"> Shogun'un bu hareketi öğrenmesine az kaldı! Çok yakında..<br> Ana Sayfaya dönmek için Shogun'a tıklyabilirsiniz.</div>
+    <div class="whitecolor"> It's almost time for the Shogun to learn this move! Very soon..
+<br> You can click on Shogun to return to the Home Page.
+</div>
 </body>
 <script src="js/bootstrap.min.js"></script><!--Bootstrap-->
 <script src="js/index.js"></script>
