--- a/index.html
+++ b/index.html
@@ -157,12 +157,12 @@
         <div class="col-md-3">
           <h3>Quick Links</h3>
           <ul>
-            <li><a href="#">Ana Sayfa</a></li>
-            <li><a href="#">Anime</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Animes</a></li>
             <li><a href="#">Manga</a></li>
-            <li><a href="#">Haberler</a></li>
-            <li><a href="#">Pek yakında!</a></li>
-            <li><a href="#">Mini Oyunlar</a></li>
+            <li><a href="#">News</a></li>
+            <li><a href="#">Very soon!</a></li>
+            <li><a href="#">Mini Games</a></li>
           </ul>
         </div>
         <div class="col-md-2">
@@ -185,7 +185,7 @@
         </div>
       </div>
       <hr>
-      <p>&copy; 2023 shogunanime.com. Tüm hakları saklıdır.</p>
+      <p>&copy; 2023 shogunanime.com. All rights reserved.</p>
     </div>
   </footer>
 </body>
