--- a/login.html
+++ b/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Giriş Yap</title>
+  <title>Login</title>
   <link rel="stylesheet" type="text/css" href="css/login-register_style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -30,7 +30,7 @@
 
 
   <div class="login_form">
-    <h1>Giriş Yap</h1>
+    <h1>Login</h1>
     <form>
       <div class="form-group">
         <label for="exampleInputEmail1"></label>
@@ -41,10 +41,10 @@
         <label for="exampleInputPassword1"></label>
         <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Şifre">
       </div>
-      <a href="#">Şifrenizi mi unuttunuz?</a> <br>
-      <a href="register.html">Hesabınız yok mu buradan kayıt olabilirsiniz.</a>
+      <a href="#">Forgot your password??</a> <br>
+      <a href="register.html">Don't have an account? You can register here.</a>
       <br>
-      <div class="button"><button type="submit" class="btn btn-primary">Giriş Yap</button></div>
+      <div class="button"><button type="submit" class="btn btn-primary">Login</button></div>
     </form>
     </form>
   </div>
