--- a/register.html
+++ b/register.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Kayıt Ol</title>
+  <title>Register</title>
   <link rel="stylesheet" type="text/css" href="css/register.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -30,7 +30,7 @@
 
 
   <div class="login_form">
-    <h1>Giriş Yap</h1>
+    <h1>Login</h1>
     <form action>
       <div class="form-group">
         <label for="ad"></label>
@@ -52,9 +52,9 @@
         <label for="exampleInputPassword1"></label>
         <input type="password" class="form-control" id="password" placeholder="Şifre">
       </div>
-      <a href="login.html">Zaten hesabınız var mı buraya tıklayın.</a>
+      <a href="login.html">Do you already have an account? Click here.</a>
       <br>
-      <div class="button"><button type="submit" class="btn btn-primary">Kayıt Ol</button></div>
+      <div class="button"><button type="submit" class="btn btn-primary">Register</button></div>
     </form>
     </form>
   </div>
