--- a/login.html
+++ b/login.html
@@ -39,7 +39,7 @@
       </div>
       <div class="form-group">
         <label for="exampleInputPassword1"></label>
-        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Şifre">
+        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
       </div>
       <a href="#">Forgot your password??</a> <br>
       <a href="register.html">Don't have an account? You can register here.</a>
