--- a/register.html
+++ b/register.html
@@ -34,15 +34,15 @@
     <form action>
       <div class="form-group">
         <label for="ad"></label>
-        <input type="text" class="form-control" id="ad" placeholder="Ad">
+        <input type="text" class="form-control" id="ad" placeholder="Name">
       </div>
       <div class="form-group">
         <label for="soyad"></label>
-        <input type="text" class="form-control" id="soyad" placeholder="Soyad">
+        <input type="text" class="form-control" id="soyad" placeholder="Surname">
       </div>
       <div class="form-group">
         <label for="kullaniciadi"></label>
-        <input type="text" class="form-control" id="kullaniciadi" placeholder="Kullanıcı Adı">
+        <input type="text" class="form-control" id="kullaniciadi" placeholder="Username">
       </div>
       <div class="form-group">
         <label for="exampleInputEmail1"></label>
@@ -50,7 +50,7 @@
       </div>
       <div class="form-group">
         <label for="exampleInputPassword1"></label>
-        <input type="password" class="form-control" id="password" placeholder="Şifre">
+        <input type="password" class="form-control" id="password" placeholder="Password">
       </div>
       <a href="login.html">Do you already have an account? Click here.</a>
       <br>
