--- a/Pages/anime_list/anime_list.html
+++ b/Pages/anime_list/anime_list.html
@@ -121,22 +121,22 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4">
-          <h3>Hakkımızda</h3>
+          <h3>About us</h3>
           <p>Shogun Anime, binlerce animeye istediğiniz zaman istediğiniz yerde ulaşmanızı sağlar. Dilediğiniz kategoriden dilediğiniz içeriği güncel olarak takip etme olanağı sunar. Daha fazlası için bize katılın.</p>
         </div>
         <div class="col-md-3">
-          <h3>Hızlı Linkler</h3>
+          <h3>Quick Links</h3>
           <ul>
-            <li><a href="#">Ana Sayfa</a></li>
+            <li><a href="#">Home</a></li>
             <li><a href="#">Anime</a></li>
             <li><a href="#">Manga</a></li>
-            <li><a href="#">Haberler</a></li>
-            <li><a href="#">Pek yakında!</a></li>
-            <li><a href="#">Mini Oyunlar</a></li>
+            <li><a href="#">News</a></li>
+            <li><a href="#">Very soon!</a></li>
+            <li><a href="#">Mini Games</a></li>
           </ul>
         </div>
         <div class="col-md-2">
-          <h3>İletişim</h3>
+          <h3>Communication</h3>
           <ul>
             <li>Email: contact@shogunanime.com</li>
             <li>Telefon: 537-786-6759</li>
@@ -144,7 +144,7 @@
           </ul>
         </div>
         <div class="col-md-3">
-          <h3>Bizi Takip Edin</h3>
+          <h3>Follow us</h3>
           <ul class="social-links">
             <li><a href="#"><i class="fa-brands fa-instagram" style="color: #C0C0C0;"></i></a></li>
             <li><a href="#"><i class="fa-brands fa-twitter" style="color: #C0C0C0;"></i></a></li>
@@ -155,7 +155,7 @@
         </div>
       </div>
       <hr>
-      <p>&copy; 2023 shogunanime.com. Tüm hakları saklıdır.</p>
+      <p>&copy; 2023 shogunanime.com. All rights reserved.</p>
     </div>
     <br><br><br>
 
