--- a/Pages/anime_pages/berserk/berserk.html
+++ b/Pages/anime_pages/berserk/berserk.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Fate/Zero</title>
+	<title>Berserk (2016)</title>
 	<link rel="stylesheet" type="text/css" href="../../../css/style.css">
 	<link rel="stylesheet" type="text/css" href="../../../css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -77,13 +77,13 @@
 
     
 <div class="anime_box">
-	<div class="box_header"><h1>Fate/Zero</h1> <div class="alt_cizgi"></div>
-	<div class="box_about"></div>Fate/Zero is set ten years before the events of Fate/stay night, and tells the story of the Fourth Holy Grail War, a secret magical tournament held in Fuyuki City, Japan, where seven mages known as Masters summon Servants, reincarnations of legendary souls and heroes from all across time, where they fight in a deadly battle royale where the winner obtains the Holy Grail, a legendary magical chalice capable of granting wishes. The main protagonist, Kiritsugu Emiya, the foster father of Fate/stay night's protagonist, Shirou Emiya, is known as a ruthless assassin who joins the tournament on behalf of his wife's family, the Einzberns.
+	<div class="box_header"><h1>Berserk (2016)</h1> <div class="alt_cizgi"></div>
+	<div class="box_about"></div>Spurred by the flame raging in his heart, the Black Swordsman Guts continues his seemingly endless quest for revenge. Standing in his path are heinous outlaws, delusional evil spirits, and a devout child of god.Even as it chips away at his life, Guts continues to fight his enemies, who wield repulsive and inhumane power, with nary but his body and sword—his strength as a human.
 </div>
 	<br>
-	<div class="categories"></bold>Categories:</bold> Action, Dark Fantasy, Tragedy</div>
-    <div class="studio"><bold>Studio: </bold>Ufotable </div>
-    <div class="myanimelist"><bold>MyAnimeList Score:</bold> 8.3</div>
+	<div class="categories"></bold>Categories:</bold> Dark Fantasy</div>
+    <div class="studio"><bold>Studio: </bold>GEMBA  </div>
+    <div class="myanimelist"><bold>MyAnimeList Score:</bold> 6.3</div>
 
   <br>
    
@@ -136,7 +136,7 @@
       
     </div>
         <br><br>
-   <iframe width="250" height="140" src="https://www.youtube.com/embed/n-7PFiut1HI?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+   <iframe width="250" height="140" src="https://www.youtube.com/embed/0MIw4xzxcTU?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   
    <br><br><br><br><br><br><br><br><br><br><br><br>
    
