--- a/Pages/anime_list/anime_list.html
+++ b/Pages/anime_list/anime_list.html
@@ -122,7 +122,7 @@
       <div class="row">
         <div class="col-md-4">
           <h3>About us</h3>
-          <p>Shogun Anime, binlerce animeye istediğiniz zaman istediğiniz yerde ulaşmanızı sağlar. Dilediğiniz kategoriden dilediğiniz içeriği güncel olarak takip etme olanağı sunar. Daha fazlası için bize katılın.</p>
+          <p>Shogun Anime, It allows you to access thousands of anime whenever and wherever you want. It offers you the opportunity to follow up-to-date content of your choice from any category you want. Join us for more.</p>
         </div>
         <div class="col-md-3">
           <h3>Quick Links</h3>
@@ -139,8 +139,8 @@
           <h3>Communication</h3>
           <ul>
             <li>Email: contact@shogunanime.com</li>
-            <li>Telefon: 537-786-6759</li>
-            <li>Adres: Ankara, Çankaya, Emek, Kazakistan Caddesi, No:28</li>
+            <li>Telephone: 537-786-6759</li>
+            <li>Address: here</li>
           </ul>
         </div>
         <div class="col-md-3">
