--- a/Pages/news_pages/news_pages.html
+++ b/Pages/news_pages/news_pages.html
@@ -198,7 +198,7 @@
         <input type="text" class="form-control" id="kullanici_yorum"  placeholder="Yorumunuz:" >
       </div>
       <br>
-      <div class="page_buttons"><button type="submit" class="comment_button">Gönder</button></div>
+      <div class="page_buttons"><button type="submit" class="comment_button">Send</button></div>
     </form>
 </div>
 
