--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
           <h3>Communication</h3>
           <ul>
             <li>Email: contact@shogunanime.com</li>
-            <li>Telefon: 537-786-6759</li>
-            <li>Adres: Ankara, Çankaya, Emek, Kazakistan Caddesi, No:28</li>
+            <li>Telephone: 911</li>
+            <li>Address: kassel</li>
           </ul>
         </div>
         <div class="col-md-3">
