--- a/Pages/support/destek.html
+++ b/Pages/support/destek.html
@@ -118,30 +118,30 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4">
-          <h3>Hakkımızda</h3>
-          <p>Shogun Anime, binlerce animeye istediğiniz zaman istediğiniz yerde ulaşmanızı sağlar. Dilediğiniz kategoriden dilediğiniz içeriği güncel olarak takip etme olanağı sunar. Daha fazlası için bize katılın.</p>
+          <h3>About us</h3>
+          <p>Shogun Anime, It allows you to access thousands of anime whenever and wherever you want. It offers you the opportunity to follow up-to-date content of your choice from any category you want. Join us for more.</p>
         </div>
         <div class="col-md-3">
-          <h3>Hızlı Linkler</h3>
+          <h3>Quick Links</h3>
           <ul>
-            <li><a href="#">Ana Sayfa</a></li>
+            <li><a href="#">Home</a></li>
             <li><a href="#">Anime</a></li>
             <li><a href="#">Manga</a></li>
-            <li><a href="#">Haberler</a></li>
-            <li><a href="#">Pek yakında!</a></li>
-            <li><a href="#">Mini Oyunlar</a></li>
+            <li><a href="#">News</a></li>
+            <li><a href="#">Very soon!</a></li>
+            <li><a href="#">Mini Games</a></li>
           </ul>
         </div>
         <div class="col-md-2">
-          <h3>İletişim</h3>
+          <h3>Communication</h3>
           <ul>
             <li>Email: contact@shogunanime.com</li>
-            <li>Telefon: 537-786-6759</li>
-            <li>Adres: Ankara, Çankaya, Emek, Kazakistan Caddesi, No:28</li>
+            <li>Telephone: 09980027280</li>
+            <li>Address: v and g</li>
           </ul>
         </div>
         <div class="col-md-3">
-          <h3>Bizi Takip Edin</h3>
+          <h3>Follow us</h3>
           <ul class="social-links">
             <li><a href="#"><i class="fa-brands fa-instagram" style="color: #C0C0C0;"></i></a></li>
             <li><a href="#"><i class="fa-brands fa-twitter" style="color: #C0C0C0;"></i></a></li>
@@ -152,7 +152,7 @@
         </div>
       </div>
       <hr>
-      <p>&copy; 2023 shogunanime.com. Tüm hakları saklıdır.</p>
+      <p>&copy; 2023 shogunanime.com. All rights reserved.</p>
     </div>
   </footer>
 </body>
