--- a/Pages/news_pages/news_pages.html
+++ b/Pages/news_pages/news_pages.html
@@ -175,17 +175,17 @@
         
       <div class="form-group">
         <label for="ad"></label>
-        <input type="text" class="form-control" id="ad" placeholder="Ad">
+        <input type="text" class="form-control" id="ad" placeholder="Name">
       </div>
 
       <div class="form-group">
         <label for="soyad"></label>
-        <input type="text" class="form-control" id="soyad" placeholder="Soyad">
+        <input type="text" class="form-control" id="soyad" placeholder="Surname">
       </div>
 
       <div class="form-group">
         <label for="kullaniciadi"></label>
-        <input type="text" class="form-control" id="kullaniciadi" placeholder="Kullanıcı Adı">
+        <input type="text" class="form-control" id="kullaniciadi" placeholder="Username">
       </div>
 
       <div class="form-group">
@@ -195,7 +195,7 @@
  
       <div class="form-group">
         <label for="kullanici_yorum"></label>
-        <input type="text" class="form-control" id="kullanici_yorum"  placeholder="Yorumunuz:" >
+        <input type="text" class="form-control" id="kullanici_yorum"  placeholder="Your comment:" >
       </div>
       <br>
       <div class="page_buttons"><button type="submit" class="comment_button">Send</button></div>
