--- a/Pages/anime_pages/berserk/bolum1.html
+++ b/Pages/anime_pages/berserk/bolum1.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Bölüm 1 | Shogun Anime</title>
+	<title>Ep 1 | Shogun Anime</title>
 	<link rel="stylesheet" type="text/css" href="../../../css/style.css">
 	<link rel="stylesheet" type="text/css" href="../../../css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -119,7 +119,7 @@ border-radius: 15px;}
 
 
 <div class="ad_bolum">
-<h5><a href="#"> Persona 4</a>    /<a href="#">       Bölüm 1</a></h5>
+<h5><a href="#"> Persona 4</a>    /<a href="#">       ep 1</a></h5>
 </div>
 
 	<div class="bolum_arka_plan">
@@ -129,27 +129,27 @@ border-radius: 15px;}
 
 
 
-    <div class="ScrollBar_bolumler"> <b>Bölüm Listesi:</b><br>
-        <a href="bolum1.html">1.Bölüm</a><br>
-       <a href="bolum1.html">2.Bölüm</a><br>
-       <a href="bolum1.html">3.Bölüm</a><br>
-       <a href="bolum1.html">4.Bölüm</a><br>
-       <a href="bolum1.html">5.Bölüm</a><br>
-       <a href="bolum1.html">6.Bölüm</a><br>
-       <a href="bolum1.html">7.Bölüm</a><br>
-       <a href="bolum1.html">8.Bölüm</a><br>
-       <a href="bolum1.html">9.Bölüm</a><br>
-       <a href="bolum1.html">10.Bölüm</a><br>
-       <a href="bolum1.html">11.Bölüm</a><br>
-       <a href="bolum1.html">12.Bölüm</a><br>
-       <a href="bolum1.html">13.Bölüm</a><br>
-       <a href="bolum1.html">14.Bölüm</a><br>
-       <a href="bolum1.html">15.Bölüm</a><br>
-       <a href="bolum1.html">16.Bölüm</a><br>
-       <a href="bolum1.html">17.Bölüm</a><br>
-       <a href="bolum1.html">18.Bölüm</a><br>
-       <a href="bolum1.html">19.Bölüm</a><br>
-       <a href="bolum1.html">20.Bölüm</a><br>
+    <div class="ScrollBar_bolumler"> <b>ep List:</b><br>
+        <a href="bolum1.html">1.ep</a><br>
+       <a href="bolum1.html">2.ep</a><br>
+       <a href="bolum1.html">3.ep</a><br>
+       <a href="bolum1.html">4.ep</a><br>
+       <a href="bolum1.html">5.ep</a><br>
+       <a href="bolum1.html">6.ep</a><br>
+       <a href="bolum1.html">7.ep</a><br>
+       <a href="bolum1.html">8.ep</a><br>
+       <a href="bolum1.html">9.ep</a><br>
+       <a href="bolum1.html">10.ep</a><br>
+       <a href="bolum1.html">11.ep</a><br>
+       <a href="bolum1.html">12.ep</a><br>
+       <a href="bolum1.html">13.ep</a><br>
+       <a href="bolum1.html">14.ep</a><br>
+       <a href="bolum1.html">15.ep</a><br>
+       <a href="bolum1.html">16.ep</a><br>
+       <a href="bolum1.html">17.ep</a><br>
+       <a href="bolum1.html">18.ep</a><br>
+       <a href="bolum1.html">19.ep</a><br>
+       <a href="bolum1.html">20.ep</a><br>
 </div>
 
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
