--- a/Pages/anime_pages/berserk/bolum1.html
+++ b/Pages/anime_pages/berserk/bolum1.html
@@ -129,7 +129,7 @@ border-radius: 15px;}
 
 
 
-    <div class="ScrollBar_bolumler"> <b>ep List:</b><br>
+    <div class="ScrollBar_bolumler"> <b>Episode List:</b><br>
         <a href="bolum1.html">1.ep</a><br>
        <a href="bolum1.html">2.ep</a><br>
        <a href="bolum1.html">3.ep</a><br>
