--- a/Pages/anime_pages/berserk/bolum1.html
+++ b/Pages/anime_pages/berserk/bolum1.html
@@ -196,14 +196,14 @@ border-radius: 15px;}
           <p>Shogun Anime allows you to access thousands of anime whenever and wherever you want. It offers you the opportunity to follow up-to-date content of your choice from any category you want. Join us for more.</p>
         </div>
         <div class="col-md-3">
-          <h3>Hızlı Linkler</h3>
+          <h3>Quick Links</h3>
           <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">Anime</a></li>
             <li><a href="#">Manga</a></li>
             <li><a href="#">News</a></li>
             <li><a href="#">Very soon!</a></li>
-            <li><a href="#">Mini Oyunlar</a></li>
+            <li><a href="#">Mini games</a></li>
           </ul>
         </div>
         <div class="col-md-2">
