--- a/Pages/anime_pages/persona4/persona.html
+++ b/Pages/anime_pages/persona4/persona.html
@@ -52,7 +52,7 @@
                         <a href="../../anime_list/anime_list.html">Animes</a>
                     </li>
                     <li>
-                        <a href="../../news_pages/news_pages.html">News</a>
+                        <a href="../../news/haberler.html">News</a>
                     </li>
                     <li>
                         <a href="../../very_soon/yakinda.html">Forum</a>
