--- a/Pages/anime_pages/Vinland/vinland.html
+++ b/Pages/anime_pages/Vinland/vinland.html
@@ -77,12 +77,12 @@
 
     
 <div class="anime_box">
-	<div class="box_header"><h1>Persona 4</h1> <div class="alt_cizgi"></div>
+	<div class="box_header"><h1>Vinland saga</h1> <div class="alt_cizgi"></div>
 	<div class="box_about"></div>A high school student forms a group that explores a hidden world accessible through TV sets to find a connection between the "realm of shadows" and the mysterious murders in their town.</div>
 	<br>
-	<div class="categories"></bold>Categories:</bold> Sci-Fi, Superpower, Psychology</div>
-    <div class="studio"><bold>Studio: </bold>AIC ASTA </div>
-    <div class="myanimelist"><bold>MyAnimeList Score:</bold> 7.5</div>
+	<div class="categories"></bold>Categories:</bold> Adventure, Epic, Historical</div>
+    <div class="studio"><bold>Studio: </bold>Wit Studio </div>
+    <div class="myanimelist"><bold>MyAnimeList Score:</bold> 8.75</div>
 
   <br>
    
@@ -124,7 +124,7 @@
 </div>
 </div>
 <div class="anime_box_right">
-    <div class="box_image"><img src="../../../Images/Anime/011.jpg">
+    <div class="box_image"><img src="../../../Images/Anime/013.jpg">
         <br><br>
      
        <div class="btn-group btn-group-justified">
