--- a/Pages/anime_pages/Vinland/vinland.html
+++ b/Pages/anime_pages/Vinland/vinland.html
@@ -124,7 +124,7 @@
 </div>
 </div>
 <div class="anime_box_right">
-    <div class="box_image"><img src="../../../Images/Anime/013.jpg">
+    <div class="box_image"><img src="../../../Images/Anime/013.webp">
         <br><br>
      
        <div class="btn-group btn-group-justified">
