--- a/Pages/anime_pages/Vinland/vinland.html
+++ b/Pages/anime_pages/Vinland/vinland.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Persona 4</title>
+	<title>Vinland Saga</title>
 	<link rel="stylesheet" type="text/css" href="../../../css/style.css">
 	<link rel="stylesheet" type="text/css" href="../../../css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
