--- a/Pages/anime_pages/Vinland/vinland.html
+++ b/Pages/anime_pages/Vinland/vinland.html
@@ -135,7 +135,7 @@
       
     </div>
         <br><br>
-   <iframe width="250" height="140" src="https://www.youtube.com/embed/kg1LQGMdmxo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+   <iframe width="250" height="140" src="https://www.youtube.com/embed/f8JrZ7Q_p-8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   
    <br><br><br><br><br><br><br><br><br><br><br><br>
    
