--- a/Pages/anime_pages/fate:zer0/bolum1.html
+++ b/Pages/anime_pages/fate:zer0/bolum1.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Bölüm 1 | Shogun Anime</title>
+	<title>Ep 1 | Shogun Anime</title>
 	<link rel="stylesheet" type="text/css" href="../../../css/style.css">
 	<link rel="stylesheet" type="text/css" href="../../../css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -89,19 +89,19 @@ border-radius: 15px;}
         <nav>
             <ul>
                 <li>
-                    <a href="../../../index.html" class="active">Ana Sayfa</a>
+                    <a href="../../../index.html" class="active">Home</a>
                 </li>
                 <li>
-                    <a href="../../anime_list/anime_list.html">Animeler</a>
+                    <a href="../../anime_list/anime_list.html">Animes</a>
                 </li>
                 <li>
-                    <a href="../../news/haberler.html">Haberler</a>
+                    <a href="../../news/haberler.html">News</a>
                 </li>
                 <li>
                     <a href="../../very_soon/yakinda.html">Forum</a>
                 </li>
                 <li>
-                    <a href="../../support/destek.html">Destek</a>
+                    <a href="../../support/destek.html">Support</a>
                 </li>
             </ul>
            
@@ -119,7 +119,7 @@ border-radius: 15px;}
 
 
 <div class="ad_bolum">
-<h5><a href="#"> Persona 4</a>    /<a href="#">       Bölüm 1</a></h5>
+<h5><a href="#"> Fate/Zero</a>    /<a href="#">       Ep 1</a></h5>
 </div>
 
 	<div class="bolum_arka_plan">
