--- a/Pages/anime_pages/fate:zer0/bolum1.html
+++ b/Pages/anime_pages/fate:zer0/bolum1.html
@@ -119,7 +119,7 @@ border-radius: 15px;}
 
 
 <div class="ad_bolum">
-<h5><a href="#"> Berserk</a>    /<a href="#">       ep 1</a></h5>
+<h5><a href="#"> Fate/Zero</a>    /<a href="#">       ep 1</a></h5>
 </div>
 
 	<div class="bolum_arka_plan">
@@ -209,9 +209,9 @@ border-radius: 15px;}
         <div class="col-md-2">
           <h3>Communication</h3>
           <ul>
-            <li>Email: contact@shogunanime.com</li>
+            <li>Email: 911</li>
             <li>Telephone: 537-786-6759</li>
-            <li>Address: Ankara, Çankaya, Emek, Kazakistan Caddesi, No:28</li>
+            <li>Address: In your...</li>
           </ul>
         </div>
         <div class="col-md-3">
