--- a/Pages/anime_pages/fate:zer0/bolum1.html
+++ b/Pages/anime_pages/fate:zer0/bolum1.html
@@ -209,8 +209,8 @@ border-radius: 15px;}
         <div class="col-md-2">
           <h3>Communication</h3>
           <ul>
-            <li>Email: 911</li>
-            <li>Telephone: 537-786-6759</li>
+            <li>Email: tim@gmail.com</li>
+            <li>Telephone: 09980047480</li>
             <li>Address: In your...</li>
           </ul>
         </div>
