--- a/Pages/anime_pages/Vinland/vinland.html
+++ b/Pages/anime_pages/Vinland/vinland.html
@@ -78,7 +78,7 @@
     
 <div class="anime_box">
 	<div class="box_header"><h1>Vinland saga</h1> <div class="alt_cizgi"></div>
-	<div class="box_about"></div>A high school student forms a group that explores a hidden world accessible through TV sets to find a connection between the "realm of shadows" and the mysterious murders in their town.</div>
+	<div class="box_about"></div>Young Thorfinn grew up listening to the stories of old sailors that had traveled the ocean and reached the place of legend, Vinland. It's said to be warm and fertile, a place where there would be no need for fighting—not at all like the frozen village in Iceland where he was born, and certainly not like his current life as a mercenary. War is his home now. Though his father once told him, "You have no enemies, nobody does. There is nobody who it's okay to hurt," as he grew, Thorfinn knew that nothing was further from the truth.</div>
 	<br>
 	<div class="categories"></bold>Categories:</bold> Adventure, Epic, Historical</div>
     <div class="studio"><bold>Studio: </bold>Wit Studio </div>
