--- a/index.html
+++ b/index.html
@@ -104,9 +104,11 @@
 </div>
 
 
-<div class="home_p4_advert">
+<!-- <div class="home_p4_advert">
   <a href="Pages/anime_list/anime_list.html"><img src="Images/p4.png">
-  </div></a>
+  </div>
+
+</a> -->
 <br><br><br><br><br>
 
 
