--- a/index.html
+++ b/index.html
@@ -128,9 +128,11 @@
 </ul>
 </div>
 
-<div class="home_p4_advert">
+<!-- <div class="home_p4_advert">
   <a href="Pages/anime_list/anime_list.html"><img src="Images/p4_2.png">
-  </div></a>
+  </div>
+</a> -->
+	
 <br><br><br><br><br>
 
 <div class="chef"><h2>Best of All Time</h2></div>
