--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 </head>
 <body>
- <header>
+ <header style="background-color: #A300D8; color: #333; padding: 10px 0;">
         <div class="header-left"> <!--Sol nav (logo)-->
             <div class="logo">
                 <a href="index.html"><img src="Images/logo.png"></a>
