--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <br><br><br><br><br><br>
 
 <div class="chef"><h2>Chef's Special</h2></div>
-<div class="alt_cizgi" style="border-bottom: #A300D8;"></div>
+<div class="alt_cizgi" style="border-bottom: 2px solid #A300D8;"></div>
     
 <div class="icerik1">
   <ul>
@@ -114,7 +114,7 @@
 
 
 <div class="chef"><h2>Current Popular</h2></div>
-<div class="alt_cizgi" style="border-bottom: #A300D8;"></div>
+<div class="alt_cizgi" style="border-bottom: 2px solid #A300D8;"></div>
     
 <div class="icerik1">
   <ul>
