--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 <br><br><br><br><br>
 
 <div class="chef"><h2>Best of All Time</h2></div>
-<div class="alt_cizgi"></div>
+<div class="alt_cizgi" style="border-bottom: 6px solid #A300D8;"></div>
     
 <div class="icerik1">
   <ul>
