--- a/Pages/anime_pages/persona4/bolum1.html
+++ b/Pages/anime_pages/persona4/bolum1.html
@@ -119,7 +119,7 @@ border-radius: 15px;}
 
 
 <div class="ad_bolum">
-<h5><a href="#"> Fate/Zero</a>    /<a href="#">       ep 1</a></h5>
+<h5><a href="#"> Persona 4</a>    /<a href="#">       ep 1</a></h5>
 </div>
 
 	<div class="bolum_arka_plan">
